80x86 Co Pro: Various changes to interrupt handling, plus changed Tube to other style of interface
Change-Id: I8f50fb857c6f01c82a6138f465ce30060a24f377

--- a/src/LX9Co_6SLX9TQG144_U1_16bitRam.ucf
+++ b/src/LX9Co_6SLX9TQG144_U1_16bitRam.ucf
@@ -91,10 +91,12 @@ NET "test<7>" LOC = "P75" |IOSTANDARD = LVCMOS33 ;
 NET "test<8>" LOC = "P74" |IOSTANDARD = LVCMOS33 ;
 NET "sw<1>" LOC = "P88" |IOSTANDARD = LVCMOS33 ;
 NET "sw<2>" LOC = "P87" |IOSTANDARD = LVCMOS33 ;
-##NET "sw<3>" LOC = "P85" | IOSTANDARD = LVCMOS33 ;
-##NET "sw<4>" LOC = "P84" | IOSTANDARD = LVCMOS33 ;
+NET "sw<3>" LOC = "P85" | IOSTANDARD = LVCMOS33 ;
+NET "sw<4>" LOC = "P84" | IOSTANDARD = LVCMOS33 ;
 
 NET "fastclk" TNM_NET = fastclk;
 TIMESPEC TS_fastclk = PERIOD "fastclk" 31.25 ns HIGH 50%;
 NET "h_phi2" TNM_NET = h_phi2;
 TIMESPEC TS_h_phi2 = PERIOD "h_phi2" 500 ns HIGH 50%;
+
+PIN "instance_name/CLKFX_BUFG_INST.O" CLOCK_DEDICATED_ROUTE = FALSE; 
