32016 Co Pro - tested some further optimizations from Udo
Change-Id: Iecf1828656f927d44def3987c611ceec320933fb

--- a/src/LX9Co_6SLX25.ucf
+++ b/src/LX9Co_6SLX25.ucf
@@ -7,8 +7,10 @@ NET "h_phi2" TNM_NET = h_phi2;
 TIMESPEC TS_h_phi2 = PERIOD "h_phi2" 500 ns HIGH 50%;
 
 PIN "inst_dcm/CLKFX_BUFG_INST.O" CLOCK_DEDICATED_ROUTE = FALSE;
+PIN "h_phi2_BUFGP/BUFG.O" CLOCK_DEDICATED_ROUTE = FALSE;
 
 NET "h_cs_b"        IOSTANDARD = LVCMOS33 ;
+
 NET "h_rdnw"        IOSTANDARD = LVCMOS33 ;
 NET "h_rst_b"       IOSTANDARD = LVCMOS33 ;
 
